fix layout issues

--- a/src/containers/Golf/scss/_play-bag.scss
+++ b/src/containers/Golf/scss/_play-bag.scss
@@ -1,6 +1,7 @@
 :root {
     --bag-club-list-height: calc(7*4rem);
     --bag-club-list-display: grid;
+    --bag-club-list-template-columns: 1fr 1fr 1fr;
     --bag-club-list-direction: column;
     --bag-club-list-wrap: wrap;
     --bag-club-list-grow: 0;
@@ -36,7 +37,6 @@
     :root {
         --bag-club-list-height: calc(2*4rem);
         --bag-club-list-display: grid;
-        --bag-club-list-template-columns:repeat(3, 1fr);
         --bag-club-list-grid-auto-rows: auto;
         --bag-club-list-display-desciption: none;
         --bag-club-list-label-flex: 1;
@@ -44,6 +44,7 @@
 }
 
 .play-bag-club-list {
+
     display: var(--bag-club-list-display);
     grid-template-columns: var(--bag-club-list-template-columns);
     grid-auto-rows: var(--bag-club-list-grid-auto-rows);
@@ -51,10 +52,12 @@
 }
 
 .l-club-span-1, .l-club-span-3 {
+
     display: flex;
     align-items: stretch;
-    min-width: 33.333vw;
 }
+
 .l-club-span-3 {
+
     grid-column: 1 / span 3;
 }
