--- a/src/containers/Golf/scss/_utils.scss
+++ b/src/containers/Golf/scss/_utils.scss
@@ -19,6 +19,10 @@
     width: 100%;
 }
 
+.u-ctx {
+    position: relative;
+}
+
 .u-pad--airy {
     padding: 0 .5rem 0 1rem;
 }
